added index page and product page

--- a/index.html
+++ b/index.html
@@ -21,16 +21,11 @@
 		<div id="menu_bar">
 		
 		</div>
-		
-		<div id="content">
-			<div class="row">
-				<div id="side_menu">
-					
-				</div>
-				<div id="product_container">
+		<div id="index_banner">
 
-				</div>
-			</div>
+		</div>
+		<div id="content">
+			
 		</div>
 		
 		<div id="footer">
