--- a/product_list.html
+++ b/product_list.html
@@ -14,14 +14,15 @@
 
 <body>
 	<div id="container">
+		<div id="topBar">
+
+		</div>
 		<div id="banner">
 
 		</div>
-
 		<div id="menu_bar">
 		
 		</div>
-		
 		<div id="content">
 			<div class="row">
 				<div id="side_menu">
