--- a/module/menu.html
+++ b/module/menu.html
@@ -3,42 +3,42 @@
 	<ul>
 		<li class="list"> a
 			<ul class="subList">
-				<li><a href="product_list.html">a1</a></li>
-				<li><a href="product_list.html">a2</a></li>
-				<li><a href="product_list.html">a3</a></li>
-				<li><a href="product_list.html">a4</a></li>
+				<a href="product_list.html"><li>a1</li></a>
+				<a href="product_list.html"><li>a2</li></a>
+				<a href="product_list.html"><li>a3</li></a>
+				<a href="product_list.html"><li>a4</li></a>
 			</ul>
 		</li>
 		<li class="list">b
 			<ul class="subList">
-				<li><a href="product_list.html">b1</a></li>
-				<li><a href="product_list.html">b2</a></li>
-				<li><a href="product_list.html">b3</a></li>
-				<li><a href="product_list.html">b4</a></li>
+				<a href="product_list.html"><li>b1</li></a>
+				<a href="product_list.html"><li>b2</li></a>
+				<a href="product_list.html"><li>b3</li></a>
+				<a href="product_list.html"><li>b4</li></a>
 			</ul>
 		</li>
 		<li class="list">c
 			<ul class="subList">
-				<li><a href="product_list.html">c1</a></li>
-				<li><a href="product_list.html">c2</a></li>
-				<li><a href="product_list.html">c3</a></li>
-				<li><a href="product_list.html">c4</a></li>
+				<a href="product_list.html"><li>c1</li></a>
+				<a href="product_list.html"><li>c2</li></a>
+				<a href="product_list.html"><li>c3</li></a>
+				<a href="product_list.html"><li>c4</li></a>
 			</ul>
 		</li>
 		<li class="list">d
 			<ul class="subList">
-				<li><a href="product_list.html">d1</a></li>
-				<li><a href="product_list.html">d2</a></li>
-				<li><a href="product_list.html">d3</a></li>
-				<li><a href="product_list.html">d4</a></li>
+				<a href="product_list.html"><li>d1</li></a>
+				<a href="product_list.html"><li>d2</li></a>
+				<a href="product_list.html"><li>d3</li></a>
+				<a href="product_list.html"><li>d4</li></a>
 			</ul>
 		</li>
 		<li class="list">e
 			<ul class="subList">
-				<li><a href="product_list.html">e1</a></li>
-				<li><a href="product_list.html">e2</a></li>
-				<li><a href="product_list.html">e3</a></li>
-				<li><a href="product_list.html">e4</a></li>
+				<a href="product_list.html"><li>e1</li></a>
+				<a href="product_list.html"><li>e2</li></a>
+				<a href="product_list.html"><li>e3</li></a>
+				<a href="product_list.html"><li>e4</li></a>
 			</ul>
 		</li>
 	</ul>
