--- a/module/top_bar.html
+++ b/module/top_bar.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-md-12 top_bar">
-		<a href="index.html" class="home_button">
+		<a href=".." class="home_button">
 			<div class="home_button_top"></div>
 			<div class="home_button_bottom"></div>
 		</a>
