--- a/product.html
+++ b/product.html
@@ -30,9 +30,9 @@
 				</div>
 				<div id="item_container">
 					<div class="row">
-						<div class="col-md-6 col-xs-6">
+						<div class="col-md-6 col-xs-6 item-image"> Image
 						</div>
-						<div class="col-md-4 col-xs-4">
+						<div class="col-md-4 col-xs-4 item-description"> Description
 						</div>
 					</div>
 				</div>
