--- a/product.html
+++ b/product.html
@@ -30,7 +30,10 @@
 				</div>
 				<div id="item_container">
 					<div class="row">
-						<div class="col-md-6 col-xs-6 item-image"> Image
+						<div class="col-md-6 col-xs-6 item-image-container">
+							<div class="col-md-12 col-xs-12 item-image">
+							
+							</div>
 						</div>
 						<div class="col-md-4 col-xs-4 item-description"> Description
 						</div>
