item_page image box

--- a/product.html
+++ b/product.html
@@ -34,8 +34,11 @@
 							<div class="col-md-12 col-xs-12 item-image">
 								image
 							</div>
+							<div class="col-md-12 col-xs-12 item-description">
+								description
+							</div>
 						</div>
-						<div class="col-md-4 col-xs-4 item-description"> Description
+						<div class="col-md-4 col-xs-4 item-content"> Product Info
 						</div>
 					</div>
 				</div>
