--- a/product.html
+++ b/product.html
@@ -43,6 +43,10 @@
 					</div>
 				</div>
 			</div>
+			<div class="row">
+				<div class="col-md-6 col-xs-6 item-suggest-container">
+				</div>
+			</div>
 		</div>
 		
 		<div id="footer">
