--- a/product.html
+++ b/product.html
@@ -41,10 +41,7 @@
 						<div class="col-md-4 col-xs-4 item-content"> Product Info
 						</div>
 					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-6 col-xs-6 item-suggest-container">
+					<div class="col-md-12 col-xs-12 item-suggest-container"> Suggestion </div>
 				</div>
 			</div>
 		</div>
