--- a/module/sideMenu.html
+++ b/module/sideMenu.html
@@ -18,5 +18,15 @@
 			<div class="col-md-12 col-xs-12 sidebar is-Sub">e2</div>
 		<div class="col-md-12 col-xs-12 sidebar is-Top">f</div>
 		<div class="col-md-12 col-xs-12 sidebar is-Top">g</div>
+		
+		<div class="col-md-12 col-xs-12 sidebar is-Title">New Arrival</div>
+		<div class="col-md-12 col-xs-12 sidebar is-Arrival">1</div>
+		<div class="col-md-12 col-xs-12 sidebar is-Arrival">2</div>
+		<div class="col-md-12 col-xs-12 sidebar is-Arrival">3</div>
+		<div class="col-md-12 col-xs-12 sidebar is-Arrival">4</div>
+		<div class="col-md-12 col-xs-12 sidebar is-Arrival">5</div>
+		<div class="col-md-12 col-xs-12 sidebar is-Arrival">6</div>
+		<div class="col-md-12 col-xs-12 sidebar is-Arrival">7</div>
+		
 	</div>
 </div>
