--- a/module/sideMenu.html
+++ b/module/sideMenu.html
@@ -18,7 +18,7 @@
 			<div class="col-md-12 col-xs-12 sidebar is-Sub">e2</div>
 		<div class="col-md-12 col-xs-12 sidebar is-Top">f</div>
 		
-		<div class="col-md-12 col-xs-12 sidebar is-Title">New Arrival</div>
+		<div class="col-md-12 col-xs-12 sidebar is-Title NewArrival">New Arrival</div>
 		<div class="col-md-12 col-xs-12 sidebar is-Arrival">1</div>
 		<div class="col-md-12 col-xs-12 sidebar is-Arrival">2</div>
 		<div class="col-md-12 col-xs-12 sidebar is-Arrival">3</div>
