--- a/Register.html
+++ b/Register.html
@@ -31,7 +31,26 @@
 					
 				</div>
 				<div id="Register_Container">
-
+						<a class="login-window">Login</a>
+						<div id="login-box" class="login-popup">
+							<a href="#" class="close"><img src="img/x_button.png" class="btn_close" title="Close Window" alt="Close" /></a>
+							  <form method="post" class="signin" action="#">
+									<fieldset class="textbox">
+									<label class="username">
+									<span>Username or email</span>
+									<input id="username" name="username" value="" type="text" autocomplete="on" placeholder="Username">
+									</label>
+									<label class="password">
+									<span>Password</span>
+									<input id="password" name="password" value="" type="password" placeholder="Password">
+									</label>
+									<button class="submit button" type="button">Sign in</button>
+									<p>
+									<a class="forgot" href="#">Forgot your password?</a>
+									</p>        
+									</fieldset>
+							 </form>
+						</div>
 				</div>
 			</div>
 		</div>
