fixed button issue2

--- a/Register.html
+++ b/Register.html
@@ -31,8 +31,9 @@
 					
 				</div>
 				<div id="Register_Container">
+						<a class="login-window" dialog="login-box">Login</a>
 						<div id="login-box" class="login-popup">
-						<a href="#" class="close"><img src="close_pop.png" class="btn_close" title="Close Window" alt="Close" /></a>
+						<a href="#" class="close"><img src="img/x_button.png" class="btn_close" title="Close Window" alt="Close" /></a>
 						  <form method="post" class="signin" action="#">
 								<fieldset class="textbox">
 								<label class="username">
