--- a/module/top_bar.html
+++ b/module/top_bar.html
@@ -4,7 +4,7 @@
 			<div class="home_button_top"></div>
 			<div class="home_button_bottom"></div>
 		</a>
-		<a class="login-window" dialog="login-box">Login</a>
+		<a class="login-window top_bar_info" dialog="login-box">Login</a>
 		<div id="login-box" class="login-popup">
 		<a href="#" class="close"><img src="img/x_button.png" class="btn_close" title="Close Window" alt="Close" /></a>
 		  <form method="post" class="signin" action="#">
