--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 		<div id="top_bar">
 		
 		</div>
-		<div>
-				<a class="login-window" dialog="login-box">Login</a>
+		<div class="login-container">
+				<a class="login-window top_bar_text" dialog="login-box">Login</a>
 				<div id="login-box" class="login-popup">
 				<a href="#" class="close"><img src="img/x_button.png" class="btn_close" title="Close Window" alt="Close" /></a>
 				  <form method="post" class="signin" action="#">
