--- a/Register.html
+++ b/Register.html
@@ -35,7 +35,7 @@
 						</label>
 						<button class="submit button" type="button">Sign in</button>
 						<p>
-						<a class="forgot" href="Register.html">Register</a>
+						<a class="forgot register_form" href="Register.html">Register</a>
 						<a class="forgot" href="#">Forgot your password?</a>
 						</p>        
 						</fieldset>
